Link the generated index pages

--- a/python/index.html
+++ b/python/index.html
@@ -13,9 +13,9 @@
   <div class="d-flex flex-column min-vh-100 min-vw-100">
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <div class="d-grid gap-2 col-4 mx-auto">
-        {% for link in links %}
-        <a class="btn btn-outline-primary" href="{{ link.href }}" role="button">{{ link.text }}</a>
-        {% endfor %}
+        
+        <a class="btn btn-outline-primary" href="/variables/" role="button">variables</a>
+        
       </div>
     </div>
   </div>
