--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!-- templates/child.html -->
 <!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>My Title</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -14,8 +15,13 @@
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <div class="d-grid gap-2 col-4 mx-auto">
         
-        <a class="btn btn-outline-primary" href="/python/" role="button">python</a>
-        
+
+<a class="btn btn-outline-primary" href="./python/" role="button">python</a>
+
+
+        <!-- 
+        <a class="btn btn-outline-primary" href="./python/" role="button">python</a>
+         -->
       </div>
     </div>
   </div>
