--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- templates/child.html -->
 <!doctype html>
 <html lang="en">
 
@@ -10,18 +9,15 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="text-bg-dark">
   <div class="d-flex flex-column min-vh-100 min-vw-100">
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <div class="d-grid gap-2 col-4 mx-auto">
         
 
-<a class="btn btn-outline-primary" href="./python/" role="button">python</a>
+<a class="btn btn-outline-light" href="./python/" role="button">python</a>
 
 
-        <!-- 
-        <a class="btn btn-outline-primary" href="./python/" role="button">python</a>
-         -->
       </div>
     </div>
   </div>
