--- a/python/variables/index.html
+++ b/python/variables/index.html
@@ -128,6 +128,9 @@ z = 1j   # complex
         transform: translateY(-50%);
     }
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
 
       </div>
     </div>
