--- a/python/control-flow/index.html
+++ b/python/control-flow/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Programming Syntax Flashcards - Python</title>
+  <title>Programming Syntax Flashcards - Python - Control-Flow</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -14,10 +14,6 @@
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <div class="d-grid gap-2 col-12 mx-auto">
         
-
-<a class="btn btn-outline-light m-3" href="./control-flow/" role="button">Control Flow</a>
-
-<a class="btn btn-outline-light m-3" href="./variables/" role="button">Variables</a>
 
 
       </div>
