Put flashcard content inside Bootstrap cards

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light m-3" href="./python/" role="button">Python</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./python/" role="button">Python</a>
 
 
       </div>
