--- a/python/index.html
+++ b/python/index.html
@@ -15,9 +15,9 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light m-3" href="./control-flow/" role="button">Control Flow</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./control-flow/" role="button">Control Flow</a>
 
-<a class="btn btn-outline-light m-3" href="./variables/" role="button">Variables</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./variables/" role="button">Variables</a>
 
 
       </div>
