--- a/python/variables/index.html
+++ b/python/variables/index.html
@@ -21,13 +21,17 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
+                        <div class="card">
+                            <div class="card-body">
                         <h1>Dictionaries</h1>
 <p>Dictionaries are collections of key-value pairs. They are unordered, changeable and indexed.</p>
-                    </div>
+                    </div></div></div>
                     <div class="flip-card-back">
+                        <div class="card">
+                            <div class="card-body">
                         <pre><code class="language-python">person = {&quot;name&quot;: &quot;Bob&quot;, &quot;age&quot;: 30}
 </code></pre>
-                    </div>
+                    </div></div></div>
                 </div>
             </div>
         </div>
@@ -36,13 +40,17 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
+                        <div class="card">
+                            <div class="card-body">
                         <h1>Sets</h1>
 <p>Sets are unordered mutable collections of unique elements.</p>
-                    </div>
+                    </div></div></div>
                     <div class="flip-card-back">
+                        <div class="card">
+                            <div class="card-body">
                         <pre><code class="language-python">unique_numbers = {1, 2, 3}
 </code></pre>
-                    </div>
+                    </div></div></div>
                 </div>
             </div>
         </div>
@@ -51,15 +59,19 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
+                        <div class="card">
+                            <div class="card-body">
                         <h1>Strings</h1>
 <p>A string in Python is a sequence of letters in a specific order.</p>
-                    </div>
+                    </div></div></div>
                     <div class="flip-card-back">
+                        <div class="card">
+                            <div class="card-body">
                         <pre><code class="language-python">double_quotes = &quot;Hello World&quot;
 single_quotes = 'Hello World'
 triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
 </code></pre>
-                    </div>
+                    </div></div></div>
                 </div>
             </div>
         </div>
@@ -68,13 +80,17 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
+                        <div class="card">
+                            <div class="card-body">
                         <h1>Lists</h1>
 <p>Lists are a collection of items that are ordered and changeable. They are defined by square brackets <code>[]</code> and items are separated by commas. Lists can contain items of different types.</p>
-                    </div>
+                    </div></div></div>
                     <div class="flip-card-back">
+                        <div class="card">
+                            <div class="card-body">
                         <pre><code class="language-python">fruits = [&quot;apple&quot;, &quot;banana&quot;, &quot;cherry&quot;]
 </code></pre>
-                    </div>
+                    </div></div></div>
                 </div>
             </div>
         </div>
@@ -83,13 +99,17 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
+                        <div class="card">
+                            <div class="card-body">
                         <h1>Tuples</h1>
 <p>A tuple is a sequence of ordered and immutable objects.</p>
-                    </div>
+                    </div></div></div>
                     <div class="flip-card-back">
+                        <div class="card">
+                            <div class="card-body">
                         <pre><code class="language-python">coordinates = (10.0, 20.0)
 </code></pre>
-                    </div>
+                    </div></div></div>
                 </div>
             </div>
         </div>
@@ -98,6 +118,8 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
+                        <div class="card">
+                            <div class="card-body">
                         <h1>Numbers</h1>
 <p>Python has three types of numbers:</p>
 <ul>
@@ -105,13 +127,15 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
 <li>float</li>
 <li>complex</li>
 </ul>
-                    </div>
+                    </div></div></div>
                     <div class="flip-card-back">
+                        <div class="card">
+                            <div class="card-body">
                         <pre><code class="language-python">x = 1    # int
 y = 2.8  # float
 z = 1j   # complex
 </code></pre>
-                    </div>
+                    </div></div></div>
                 </div>
             </div>
         </div>
@@ -135,7 +159,7 @@ z = 1j   # complex
     .flip-card {
         background-color: transparent;
         /* width: 100%; */
-        height: 300px;
+         height: 300px;
         /* border: 1px solid #f1f1f1; */
         /* perspective: 1000px; */
         /* Remove this if you don't want the 3D effect */
