Trying to overflow wrap long lines of code

--- a/python/variables/index.html
+++ b/python/variables/index.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-wrap: break-word;">
                                         <pre><code class="language-python">person = {&quot;name&quot;: &quot;Bob&quot;, &quot;age&quot;: 30}
 </code></pre>
                                     </div>
@@ -57,7 +57,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-wrap: break-word;">
                                         <pre><code class="language-python">unique_numbers = {1, 2, 3}
 </code></pre>
                                     </div>
@@ -80,7 +80,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-wrap: break-word;">
                                         <pre><code class="language-python">double_quotes = &quot;Hello World&quot;
 single_quotes = 'Hello World'
 triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
@@ -105,7 +105,7 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-wrap: break-word;">
                                         <pre><code class="language-python">fruits = [&quot;apple&quot;, &quot;banana&quot;, &quot;cherry&quot;]
 </code></pre>
                                     </div>
@@ -128,7 +128,7 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-wrap: break-word;">
                                         <pre><code class="language-python">coordinates = (10.0, 20.0)
 </code></pre>
                                     </div>
@@ -156,7 +156,7 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
+                                    <div class="card-body" style="overflow-wrap: break-word;">
                                         <pre><code class="language-python">x = 1    # int
 y = 2.8  # float
 z = 1j   # complex
@@ -170,14 +170,14 @@ z = 1j   # complex
                 
             </div>
         </div>
-        <div class="row m-3">
-            <div class="col">
+        <div class="row">
+            <div class="col ms-3">
                 <button class="btn btn-dark btn-lg btn-outline-light w-100" type="button" data-bs-target="#carousel" data-bs-slide="prev">
                     <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
                     <span class="">Previous</span>
                 </button>
             </div>
-            <div class="col">
+            <div class="col me-3">
                 <button class="btn btn-dark btn-lg btn-outline-light w-100" type="button" data-bs-target="#carousel" data-bs-slide="next">
                     <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
                     <span class="">Next</span>
