Rename variables to data types

--- a/python/index.html
+++ b/python/index.html
@@ -17,7 +17,7 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./control-flow/" role="button">Control Flow</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./variables/" role="button">Variables</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./data-types/" role="button">Data Types</a>
 
 
       </div>
