--- a/python/data-types/index.html
+++ b/python/data-types/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Programming Syntax Flashcards - Python - Variables</title>
+  <title>Programming Syntax Flashcards - Python - Data-Types</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -34,7 +34,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body" style="overflow-wrap: break-word;">
+                                    <div class="card-body">
                                         <pre><code class="language-python">person = {&quot;name&quot;: &quot;Bob&quot;, &quot;age&quot;: 30}
 </code></pre>
                                     </div>
@@ -57,7 +57,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body" style="overflow-wrap: break-word;">
+                                    <div class="card-body">
                                         <pre><code class="language-python">unique_numbers = {1, 2, 3}
 </code></pre>
                                     </div>
@@ -80,7 +80,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body" style="overflow-wrap: break-word;">
+                                    <div class="card-body">
                                         <pre><code class="language-python">double_quotes = &quot;Hello World&quot;
 single_quotes = 'Hello World'
 triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
@@ -105,7 +105,7 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body" style="overflow-wrap: break-word;">
+                                    <div class="card-body">
                                         <pre><code class="language-python">fruits = [&quot;apple&quot;, &quot;banana&quot;, &quot;cherry&quot;]
 </code></pre>
                                     </div>
@@ -128,7 +128,7 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body" style="overflow-wrap: break-word;">
+                                    <div class="card-body">
                                         <pre><code class="language-python">coordinates = (10.0, 20.0)
 </code></pre>
                                     </div>
@@ -156,7 +156,7 @@ triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body" style="overflow-wrap: break-word;">
+                                    <div class="card-body">
                                         <pre><code class="language-python">x = 1    # int
 y = 2.8  # float
 z = 1j   # complex
@@ -246,6 +246,10 @@ z = 1j   # complex
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+    }
+
+    pre {
+        white-space: pre-wrap;
     }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
