--- a/python/index.html
+++ b/python/index.html
@@ -17,6 +17,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./control-flow/" role="button">Control Flow</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./operators/" role="button">Operators</a>
+
 <a class="btn btn-outline-light ms-3 me-3" href="./data-types/" role="button">Data Types</a>
 
 
