Generate the final HTML

--- a/python/operators/index.html
+++ b/python/operators/index.html
@@ -69,6 +69,71 @@ print(a &gt;&gt; 1)  # Output: 5  (Binary: 0101)
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
+                                        <h1>Assignment Operators</h1>
+<p>Assignment operators in Python are used to assign values to variables and can also perform operations before the assignment. The primary assignment operators include =, +=, -=, <em>=, /=, %=, //=, </em>*=, &amp;=, |=, ^=, &lt;&lt;=, and &gt;&gt;=.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-card-back">
+                                <div class="card h-100 text-bg-dark border-light">
+                                    <div class="card-body">
+                                        <pre><code class="language-python">a = 10
+b = 3
+
+# Simple assignment
+a = b        # a is now 3
+
+# Add and assign
+a += b       # a is now 6 (3 + 3)
+
+# Subtract and assign
+a -= b       # a is now 3 (6 - 3)
+
+# Multiply and assign
+a *= b       # a is now 9 (3 * 3)
+
+# Divide and assign
+a /= b       # a is now 3.0 (9 / 3)
+
+# Modulus and assign
+a %= b       # a is now 0.0 (3.0 % 3)
+
+# Floor division and assign
+a = 10       # reset a to 10
+a //= b      # a is now 3 (10 // 3)
+
+# Exponentiation and assign
+a **= b      # a is now 27 (3 ** 3)
+
+# Bitwise AND and assign
+a &amp;= b       # a is now 3 (27 &amp; 3)
+
+# Bitwise OR and assign
+a |= b       # a is now 3 (3 | 3)
+
+# Bitwise XOR and assign
+a ^= b       # a is now 0 (3 ^ 3)
+
+# Bitwise left shift and assign
+a = 10       # reset a to 10
+a &lt;&lt;= b      # a is now 80 (10 &lt;&lt; 3)
+
+# Bitwise right shift and assign
+a &gt;&gt;= b      # a is now 10 (80 &gt;&gt; 3)
+</code></pre>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="carousel-item">
+                    <div class="flip-card m-3">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <div class="card h-100 text-bg-dark border-light">
+                                    <div class="card-body">
                                         <h1>Comparison Operators</h1>
 <p>Comparison operators in Python are used to compare two values and return a Boolean result (True or False). The primary comparison operators include ==, !=, &lt;, &gt;, &lt;=, and &gt;=.</p>
                                     </div>
@@ -205,7 +270,7 @@ print(a ** b)  # Output: 1000
     document.querySelector(".carousel-item").classList.add("active")
     const myCarouselElement = document.querySelector('#carousel')
     const carousel = new bootstrap.Carousel(myCarouselElement, {
-        touch: true,
+        touch: false,
     });
 </script>
 <style>
