--- a/python/data-types/index.html
+++ b/python/data-types/index.html
@@ -190,7 +190,7 @@ z = 1j   # complex
     document.querySelector(".carousel-item").classList.add("active")
     const myCarouselElement = document.querySelector('#carousel')
     const carousel = new bootstrap.Carousel(myCarouselElement, {
-        touch: true,
+        touch: false,
     });
 </script>
 <style>
