Python OOP content

--- a/python/index.html
+++ b/python/index.html
@@ -17,6 +17,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./control-flow/" role="button">Control Flow</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./object-oriented-programming/" role="button">Object Oriented Programming</a>
+
 <a class="btn btn-outline-light ms-3 me-3" href="./operators/" role="button">Operators</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./exception-handling/" role="button">Exception Handling</a>
