--- a/python/index.html
+++ b/python/index.html
@@ -19,6 +19,10 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./modules-and-packages/" role="button">Modules And Packages</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./file-handling/" role="button">File Handling</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./Miscellaneous/" role="button">Miscellaneous</a>
+
 <a class="btn btn-outline-light ms-3 me-3" href="./object-oriented-programming/" role="button">Object Oriented Programming</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./operators/" role="button">Operators</a>
