--- a/python/index.html
+++ b/python/index.html
@@ -21,13 +21,13 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./file-handling/" role="button">File Handling</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./Miscellaneous/" role="button">Miscellaneous</a>
-
 <a class="btn btn-outline-light ms-3 me-3" href="./object-oriented-programming/" role="button">Object Oriented Programming</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./operators/" role="button">Operators</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./exception-handling/" role="button">Exception Handling</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./miscellaneous/" role="button">Miscellaneous</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./functions/" role="button">Functions</a>
 
